Fix tmux session matcher to wildcard am-* pattern

--- a/config/tmux.conf.example
+++ b/config/tmux.conf.example
@@ -34,10 +34,10 @@ set -g pane-active-border-style 'fg=colour51'
 # Use your existing tmux prefix key.
 
 # Prefix + a: switch to last used am session
-bind a if-shell -F '#{m:^am-,#{session_name}}' 'run-shell "switch-last"' 'display-message "am shortcuts are active only in am-* sessions"'
+bind a if-shell -F '#{m:am-*,#{session_name}}' 'run-shell "switch-last"' 'display-message "am shortcuts are active only in am-* sessions"'
 
 # Prefix + s: open agent manager popup
-bind s if-shell -F '#{m:^am-,#{session_name}}' 'display-popup -E -w 90% -h 80% "am"' 'display-message "am shortcuts are active only in am-* sessions"'
+bind s if-shell -F '#{m:am-*,#{session_name}}' 'display-popup -E -w 90% -h 80% "am"' 'display-message "am shortcuts are active only in am-* sessions"'
 
 # Command alias: ":am" opens agent manager in popup
 set -s command-alias[100] am='display-popup -E -w 90% -h 80% "am"'
