--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,5 +21,8 @@ jobs:
         run: |
           bash -n am lib/*.sh bin/* scripts/*.sh tests/test_all.sh
 
+      - name: Check docs in sync
+        run: ./scripts/check-docs.sh
+
       - name: Run test suite
         run: ./tests/test_all.sh
