Add configurable defaults and tmux session hotkeys

--- a/config/tmux.conf.example
+++ b/config/tmux.conf.example
@@ -5,8 +5,14 @@
 # Prefix + a: switch to last used am session
 bind a if-shell -F '#{m:am-*,#{session_name}}' 'run-shell "switch-last"' 'display-message "am shortcuts are active only in am-* sessions"'
 
+# Prefix + n: open new-session popup
+bind n if-shell -F '#{m:am-*,#{session_name}}' 'display-popup -E -w 90% -h 80% "am new"' 'display-message "am shortcuts are active only in am-* sessions"'
+
 # Prefix + s: open agent manager popup
 bind s if-shell -F '#{m:am-*,#{session_name}}' 'display-popup -E -w 90% -h 80% "am"' 'display-message "am shortcuts are active only in am-* sessions"'
+
+# Prefix + x: kill the current am session and switch to the next most recent one
+bind x if-shell -F '#{m:am-*,#{session_name}}' 'run-shell "kill-and-switch #{session_name}"' 'display-message "am shortcuts are active only in am-* sessions"'
 
 # Command alias: ":am" opens agent manager in popup
 set -s command-alias[100] am='display-popup -E -w 90% -h 80% "am"'
